force-app/main/default/objects/Product__c/fields/Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Availability_Status__c</fullName>
    <label>Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Low Stock</fullName>
            </value>
            <value>
                <fullName>In Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>