force-app/main/default/objects/Product__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Annibale Colombo</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Asus</fullName>
            </value>
            <value>
                <fullName>Attitude</fullName>
            </value>
            <value>
                <fullName>Bath Trends</fullName>
            </value>
            <value>
                <fullName>Beats</fullName>
            </value>
            <value>
                <fullName>Calvin Klein</fullName>
            </value>
            <value>
                <fullName>Casual Comfort</fullName>
            </value>
            <value>
                <fullName>Chanel</fullName>
            </value>
            <value>
                <fullName>Chic Cosmetics</fullName>
            </value>
            <value>
                <fullName>Chrysler</fullName>
            </value>
            <value>
                <fullName>Classic Wear</fullName>
            </value>
            <value>
                <fullName>Comfort Trends</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Dior</fullName>
            </value>
            <value>
                <fullName>Dodge</fullName>
            </value>
            <value>
                <fullName>Dolce &amp; Gabbana</fullName>
            </value>
            <value>
                <fullName>Elegance Collection</fullName>
            </value>
            <value>
                <fullName>Essence</fullName>
            </value>
            <value>
                <fullName>Fashion Co.</fullName>
            </value>
            <value>
                <fullName>Fashion Diva</fullName>
            </value>
            <value>
                <fullName>Fashion Express</fullName>
            </value>
            <value>
                <fullName>Fashion Fun</fullName>
            </value>
            <value>
                <fullName>Fashion Gold</fullName>
            </value>
            <value>
                <fullName>Fashionista</fullName>
            </value>
            <value>
                <fullName>Fashion Shades</fullName>
            </value>
            <value>
                <fullName>Fashion Timepieces</fullName>
            </value>
            <value>
                <fullName>Fashion Trends</fullName>
            </value>
            <value>
                <fullName>Furniture Co.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>