force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
            <value>
                <fullName>beauty</fullName>
            </value>
            <value>
                <fullName>fragrances</fullName>
            </value>
            <value>
                <fullName>furniture</fullName>
            </value>
            <value>
                <fullName>groceries</fullName>
            </value>
            <value>
                <fullName>home-decoration</fullName>
            </value>
            <value>
                <fullName>kitchen-accessories</fullName>
            </value>
            <value>
                <fullName>laptops</fullName>
            </value>
            <value>
                <fullName>mens-shirts</fullName>
            </value>
            <value>
                <fullName>mens-shoes</fullName>
            </value>
            <value>
                <fullName>mens-watches</fullName>
            </value>
            <value>
                <fullName>mobile-accessories</fullName>
            </value>
            <value>
                <fullName>motorcycle</fullName>
            </value>
            <value>
                <fullName>skin-care</fullName>
            </value>
            <value>
                <fullName>smartphones</fullName>
            </value>
            <value>
                <fullName>sports-accessories</fullName>
            </value>
            <value>
                <fullName>sunglasses</fullName>
            </value>
            <value>
                <fullName>tablets</fullName>
            </value>
            <value>
                <fullName>tops</fullName>
            </value>
            <value>
                <fullName>vehicle</fullName>
            </value>
            <value>
                <fullName>womens-bags</fullName>
            </value>
            <value>
                <fullName>womens-dresses</fullName>
            </value>
            <value>
                <fullName>womens-jewellery</fullName>
            </value>
            <value>
                <fullName>womens-shoes</fullName>
            </value>
            <value>
                <fullName>womens-watches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>