force-app/main/default/objects/Product__c/fields/Dimensions_depth__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_depth__c</fullName>
    <label>Depth</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>