force-app/main/default/objects/Product__c/fields/Dimensions_height__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_height__c</fullName>
    <label>Height</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>