force-app/main/default/objects/Product__c/fields/Dimensions_width__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_width__c</fullName>
    <label>Width</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>