force-app/main/default/objects/Product__c/fields/Dummy_ID__c.field-meta.xml
<CustomField>
    <fullName>Dummy_ID__c</fullName>
    <label>Dummy ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>