force-app/main/default/objects/Product__c/fields/Image_2__c.field-meta.xml
<CustomField>
    <fullName>Image_2__c</fullName>
    <label>Image 2</label>
    <type>Url</type>
</CustomField>