force-app/main/default/objects/Product__c/fields/Meta_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Meta_Barcode__c</fullName>
    <label>Barcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>