force-app/main/default/objects/Product__c/fields/Meta_Created_at__c.field-meta.xml
<CustomField>
    <fullName>Meta_Created_at__c</fullName>
    <label>Created at</label>
    <type>DateTime</type>
</CustomField>