force-app/main/default/objects/Product__c/fields/Meta_Qr_Code__c.field-meta.xml
<CustomField>
    <fullName>Meta_Qr_Code__c</fullName>
    <label>QR Code</label>
    <type>Url</type>
</CustomField>