force-app/main/default/objects/Product__c/fields/Meta_Updated_at__c.field-meta.xml
<CustomField>
    <fullName>Meta_Updated_at__c</fullName>
    <label>Updated at</label>
    <type>DateTime</type>
</CustomField>