force-app/main/default/objects/Product__c/fields/Minimum_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Quantity__c</fullName>
    <label>Minimum Order Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>