force-app/main/default/objects/Product__c/fields/Picture_2__c.field-meta.xml
<CustomField>
    <fullName>Picture_2__c</fullName>
    <formula>HYPERLINK(Image_2__c , IMAGE(Image_2__c , &quot;&quot;, 80, 80))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture 2</label>
    <type>Text</type>
</CustomField>