force-app/main/default/objects/Product__c/fields/Picture_3__c.field-meta.xml
<CustomField>
    <fullName>Picture_3__c</fullName>
    <formula>HYPERLINK(Image_3__c , IMAGE(Image_3__c , &quot;&quot;, 80, 80))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture 3</label>
    <type>Text</type>
</CustomField>