force-app/main/default/objects/Product__c/fields/Picture_4__c.field-meta.xml
<CustomField>
    <fullName>Picture_4__c</fullName>
    <formula>HYPERLINK(Image_4__c , IMAGE(Image_4__c , &quot;&quot;, 80, 80))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture 4</label>
    <type>Text</type>
</CustomField>