force-app/main/default/objects/Product__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula>HYPERLINK(Image_1__c , IMAGE(Image_1__c , &quot;&quot;, 100, 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>