force-app/main/default/objects/Product__c/fields/Return_Policy__c.field-meta.xml
<CustomField>
    <fullName>Return_Policy__c</fullName>
    <label>Return Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>30 days return policy</fullName>
            </value>
            <value>
                <fullName>60 days return policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>