force-app/main/default/objects/Product__c/fields/Shipping_Information__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Information__c</fullName>
    <label>Shipping Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Ships in 1-2 business days</fullName>
            </value>
            <value>
                <fullName>Ships in 2 weeks</fullName>
            </value>
            <value>
                <fullName>Ships in 1 month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>