force-app/main/default/objects/Product__c/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <externalId>true</externalId>
    <label>SKU</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>