force-app/main/default/objects/Product__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>beauty</fullName>
            </value>
            <value>
                <fullName>mascara</fullName>
            </value>
            <value>
                <fullName>eyeshadow</fullName>
            </value>
            <value>
                <fullName>face powder</fullName>
            </value>
            <value>
                <fullName>nail polish</fullName>
            </value>
            <value>
                <fullName>fragrances</fullName>
            </value>
            <value>
                <fullName>perfumes</fullName>
            </value>
            <value>
                <fullName>furniture</fullName>
            </value>
            <value>
                <fullName>beds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>