force-app/main/default/objects/Product__c/fields/Warranty_Information__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Information__c</fullName>
    <label>Warranty Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1 month warranty</fullName>
            </value>
            <value>
                <fullName>2 month warranty</fullName>
            </value>
            <value>
                <fullName>3 month warranty</fullName>
            </value>
            <value>
                <fullName>4 month warranty</fullName>
            </value>
            <value>
                <fullName>5 month warranty</fullName>
            </value>
            <value>
                <fullName>6 month warranty</fullName>
            </value>
            <value>
                <fullName>1 year warranty</fullName>
            </value>
            <value>
                <fullName>2 year warranty</fullName>
            </value>
            <value>
                <fullName>3 year warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>